fix(profile avatar container): fix z index, hover overlay overlaps popup component

--- a/frontend/src/blocks/Profile.css
+++ b/frontend/src/blocks/Profile.css
@@ -25,7 +25,7 @@
 	width: 100%;
 	border-radius: 100px;
 	height: 100%;
-	z-index: 5;
+	z-index: 2;
 	transition: background-color 0.4s ease-out;
 }
 
